2017-02-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27340.

	* src/attack.c (launch_plugin): Check for Host/dead and Host/ping_failed
	before attempting to launch the plugin.

2016-10-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26467.

	* src/pluginlaunch.c (pluginlaunch_stop): Add soft_stop argument.

	* src/pluginlaunch.h: Adjust function parameter.

	* src/attack.c (launch_plugin, attack_host, handle_scan_stop_signal):
	Adjust function call.

2016-11-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26731.

	* src/openvassd.c (reload_openvassd): Reinitialize logging on scanner
	reload.

2016-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-nvt-sync.in: Change URL for feed tarball
	to use the dedicated community server.

2016-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport parts of r26436.

	* tools/greenbone-nvt-sync.in: Update URL about general information
	about GSF.

2016-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26403.

	* src/openvassd.c (loading_handler_stop): Call terminate_process().
	Handles a race condition where the scanner tries to terminate the
	loading handler process before the later has set the signal handler.

2016-10-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugin_next_unrun_dependency): Get oid from
	plugin arglist.

2016-10-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26363.

	* src/pluginscheduler.c (plugin_next_unrun_dependency): Add parameter to
	check for infinite recursive calls caused by dependency cycles.
	(plugins_scheduler_next): Adjust plugin_next_unrun_dependency() function
	call.

2016-09-26  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26271.

	* src/CMakeLists.txt: Add add_definitions for SCANNER_NVT_TIMEOUT to
	have it defined in the C code.

2016-09-06  Michael Wiegand <michael.wiegand@greenbone.net>
